master/force-app/main/default/objects/Custom_Object_New_with_Fields__c/fields/Custom_Checkbox_New__c.field-meta.xml
<CustomField>
    <fullName>Custom_Checkbox_New__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Custom Checkbox New</description>
    <inlineHelpText>Custom Checkbox New</inlineHelpText>
    <label>Custom Checkbox New</label>
    <type>Checkbox</type>
</CustomField>