master/force-app/main/default/objects/Custom_Object_New_with_Fields__c/fields/Custom_Field_New__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_New__c</fullName>
    <description>Custom Field New</description>
    <inlineHelpText>Custom Field New</inlineHelpText>
    <label>Custom Field New</label>
    <length>99</length>
    <type>Text</type>
</CustomField>