master/force-app/main/default/objects/Custom_Object_New_with_Fields__c/fields/Custom_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Custom_Picklist__c</fullName>
    <description>Custom Picklist</description>
    <inlineHelpText>Custom Picklist</inlineHelpText>
    <label>Custom Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>